--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,15 @@ button:focus {
     background-color: #f4f4fd;
 }
 
+.philosophy {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+
 .page-footer {
     color: var(--font-color);
 }
