--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ button:focus {
     background-color: #f4f4fd;
 }
 
-.philosophy {
+.src {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
