--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ button:focus {
     color: var(--font-color);
 }
 
-.team-stration {
-    background-color: #F4F4FD;
+.team-section {
+    background-color: #f4f4fd;
 }
 
 .sol-class {
@@ -158,7 +158,7 @@ button:focus {
     background-color: var(--studio-class);
 }
 
-.last-class {
+.team_class {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -229,17 +229,6 @@ button:focus {
 .style-button:focus,
 .style-button:hover {
     color: var(--color-white);
-}
-
-.style-button {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--iris);
-    background-color: var(--studio-class);
-    cursor: pointer;
 }
 
 .class-port {
