--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,15 @@ button:focus {
     background-color: #f4f4fd;
 }
 
+.our-team {
+   font-size: 36px;
+   line-height: 1.11;
+   text-align: center;
+   letter-spacing: 0.02em;
+   text-transform: capitalize;
+   color: #2e2f42; 
+}
+
 .sol-class {
     font-weight: 500;
     font-size: 20px;
@@ -145,7 +154,7 @@ button:focus {
     letter-spacing: 0.02em;
 }
 
-.sec-head {
+.team-aps {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
