--- a/css/styles.css
+++ b/css/styles.css
@@ -1,143 +1,116 @@
-:root {
-    --first-color-text: #000;
-    --second-color-text: #4285f4;
-    --color-white: white;
-    --iris: #4d5ae5;
-    --blue-color: #404bbf;
-    --studio-class: #f4f4fd;
-    --ourteam-section: #ffffff;
-    --color-body: #434455;
-    --font-color: #2e2f42;
-}
-
-.logo-class:hover,
-.logo-class:focus {
-    color: var(--blue-color);
-}
-
-.li-links:hover,
-.li-links:focus {
-    color: var(--blue-color);
-}
-
 body {
-    font-family: 'Roboto', sans-serif;
-    color: var(--color-body);
-    line-height: 1.6;
-    background-color: var(--color-white);
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #ffffff;
 }
 
-header {
-    background-color: var(--color-white);
-}
-
-button {
-    background-color: var(--iris);
-    color: var(--color-white);
-}
-
-.link {
-    text-decoration: none;
-}
-
-button:hover,
-button:focus {
-    background-color: var(--blue-color);
-}
-
-.studio-class {
-    color: var(--studio-class);
-}
-
-.ourteam-section {
-    background-color: var(--ourteam-section);
-}
 
 .logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
     font-size: 18px;
-    font-family: 'Raleway', sans-serif;
-    text-decoration: none;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--iris);
-    font-weight: 700;
+    text-decoration: none;
+    color: #4d5ae5;
 }
-
-.font {
-    font-size: 16px;
-    font-family: 'Roboto';
-    font-weight: 500;
-    line-height: 24px;
-    color: var(--font-color);
-}
-
 .studio-color {
-    color: var(--font-color);
+    color: #2e2f42;
 }
 
-.list {
-    list-style: none;
-    font-size: 16;
-    line-height: 1.5;
-    letter-spacing: 0.02;
-    color: var(--color-body);
+.logo {
+    color: #4d5ae5;
 }
 
-.link-studio {
-    font-weight: 500;
+
+ul {
+    list-style-type: none;
+}
+
+
+.navigation-links .link {
+    color: #2e2f42;
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--font-color);
     text-decoration: none;
 }
 
-.adress-style {
+.navigation-links .link:hover {
+    color: #404bbf;
+}
+
+.navigation-links .link:active {
+    color: #404bbf;
+}
+
+
+.address-details {
     font-style: normal;
 }
 
-.section-details {
-    background-color: var(--font-color);
+.li-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-decoration: none;
+}
+.link:hover,
+.li-link:hover {
+    color: #404bbf;
+}
+.link:focus,
+.li-link:focus {
+    color: #404bbf;
+}
+.link:active,
+.li-link:active {
+    color: #404bbf;
 }
 
-.top-class {
+.section-details {
+    background-color: #2e2f42;
+}
+
+
+.top-class-text {
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    color: var(--color-white);
+    color: #ffffff;
 }
 
 .button-class {
     background-color: #4d5ae5;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: var(--color-white);
+
+    color: #fff;
     cursor: pointer;
 }
 
-.second-class {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    color: var(--font-color);
+.button-class:hover,
+.button-class:active,
+.button-class:focus {
+    background-color: #404bbf;
 }
 
-.team-section {
-    background-color: #f4f4fd;
-}
 
-.our-team {
-   font-size: 36px;
-   line-height: 1.11;
-   text-align: center;
-   letter-spacing: 0.02em;
-   text-transform: capitalize;
-   color: #2e2f42; 
+.philosophy-header-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .sol-class {
@@ -145,103 +118,40 @@ button:focus {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--font-color);
+    color: #2e2f42;
 }
 
-.footer-acapit {
-    line-height: 1.5;
-    color: var(--studio-class);
-    letter-spacing: 0.02em;
+.team-card-background {
+    background-color: #ffffff;
 }
-
-.team-aps {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--font-color);
-}
-
-.last-section {
-    background-color: var(--studio-class);
-}
-
-.page-footer {
-    color: var(--font-color);
-}
-
-.footer-studio {
-    color: var(--studio-class);
-}
-
-.page-footer {
-    line-height: 1.5;
-    color: var(--studio-class);
-    letter-spacing: 0.02em;
-}
-
-.studio-head {
-    color: var(--font-color);
-}
-
-.address-details {
-    font-style: normal;
-}
-
-.logo-class {
-    font-weight: 500;
+.p-section-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--font-color);
+    color: #434455;
 }
 
-.li-links {
-    font-size: 16px;
+
+.team-section {
+    background-color: #f4f4fd;
+}
+
+.ourteam-section {
+    background-color: #ffffff;
+}
+
+
+.footer-portfolio {
+    background-color: #2e2f42;
+}
+
+.logo-white {
+    color: #f4f4fd;
+}
+
+.footer-last-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--color-body);
-    font-style: normal;
-}
-
-.link-details {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--color-body);
-}
-
-.portfolio-footer {
-    background-color: var(--font-color);
-}
-
-.footer-color {
-    color: var(--studio-class);
-}
-
-.acapit {
-    line-height: 1.5;
-    color: #F4F4FD;
-    letter-spacing: 0.02em;
-}
-
-.style-button:focus,
-.style-button:hover {
-    color: var(--color-white);
-}
-
-.class-port {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--color-body);
-}
-
-.highlight {
-    color: var(--second-color-text);
-}
-
-.highlight-web {
-    color: var(--studio-class);
+    color: #f4f4fd;
+    background-color: #2e2f42;
 }
