--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
 body {
+    font-size: 'Roboto', sans-serif;
     font-family: "Roboto", sans-serif;
-    color: #434455;
-    background-color: #ffffff;
+    color: #434455
+    background-color: #FFFFFF;
 }
 
 
 .logo {
-    font-family: "Raleway", sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
@@ -15,6 +16,7 @@ body {
     text-decoration: none;
     color: #4d5ae5;
 }
+
 .studio-color {
     color: #2e2f42;
 }
@@ -22,7 +24,6 @@ body {
 .logo {
     color: #4d5ae5;
 }
-
 
 ul {
     list-style-type: none;
@@ -72,7 +73,7 @@ ul {
 }
 
 .section-details {
-    background-color: #2e2f42;
+background-color: #2e2f42;
 }
 
 
@@ -85,8 +86,8 @@ ul {
 }
 
 .button-class {
-    background-color: #4d5ae5;
-    font-family: "Roboto", sans-serif;
+    background-color: #4D5AE5;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -104,9 +105,9 @@ ul {
 
 
 .philosophy-header-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
     text-align: center;
     letter-spacing: 0.02em;
     color: #2e2f42;
@@ -137,7 +138,7 @@ ul {
 }
 
 .ourteam-section {
-    background-color: #ffffff;
+    background-color: #FFFFFF;
 }
 
 
