--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,16 @@ background-color: #2E2F42;
     background-color: #2E2F42;
 }
 
+.footer-logo {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5EA5;
+}
+
 .logo-white {
     color: #F4F4FD;
 }
