--- a/css/styles.css
+++ b/css/styles.css
@@ -161,9 +161,8 @@ background-color: #2E2F42;
     color: #F4F4FD;
 }
 
-.footer-text {
+.acapit-footer-text {
     line-height: 1.5;
-    letter-spacing: 0.02em;
     color: #F4F4FD;
-    background-color: #2E2F42;
+    letter-spacing: 0.02em;
 }
